gitops/apps/fireflyiii/importer/sts.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: fireflyiii-importer
  labels:
    app: fireflyiii-importer
    part-of: fireflyiii
spec:
  replicas: 1
  serviceName: 'fireflyiii-importer' # Stable network identity
  selector:
    matchLabels:
      app: fireflyiii-importer
      part-of: fireflyiii
  template:
    metadata:
      labels:
        app: fireflyiii-importer
        part-of: fireflyiii
    spec:
      containers:
        - name: fireflyiii-importer
          image: fireflyiii/data-importer:version-1.5.6
          ports:
            - name: fireflyiiiimp
              containerPort: 8080
          volumeMounts:
            - name: configurations
              mountPath: /configurations
      volumes:
        - name: configurations
          persistentVolumeClaim:
            claimName: configurations
  volumeClaimTemplates:
    - metadata:
        name: configurations
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 10Gi
