gitops/apps/fireflyiii/importer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-importer
  annotations:
    cert-manager.io/cluster-issuer: root-didactiklabs
spec:
  rules:
    - host: 'firefly-importer.didactik.labs'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fireflyiii-importer
                port:
                  number: 8080
  tls:
    - hosts:
        - 'firefly-importer.didactik.labs'
      secretName: firefly-importer-tls
